clean up inspection issues

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
     <string name="app_name">Strict Extras</string>
-    <string name="start_activty">Start activity</string>
+    <string name="start_activity">Start activity</string>
 </resources>
